overlap fixing

--- a/styles/main.css
+++ b/styles/main.css
@@ -28,7 +28,7 @@ body {
     font-family: 'Raleway', sans-serif;
     font-size: 6rem;
     font-weight: 900;
-    margin-top: 150px;
+    margin-top: 50px;
     color: #000000;
 }
 
@@ -36,7 +36,7 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 3rem;
     font-weight: 700;
-    margin-top: 150px;
+    margin-top: 50px;
     color: #000000;
 }
 
